--- a/style.css
+++ b/style.css
@@ -15,9 +15,7 @@
     font-size: 16pt;
   }
 
-  
-
-  header .container {
+header .container {
     display: flex;
     align-items: center;
     height: 100px;
@@ -28,7 +26,7 @@
     margin: 0 auto;
 }
 .global-nav {
-    background-color: #fff;
+    background-color: greenyellow;
     position: fixed;
     width: 100%;
 }
